fix css overflow display none for paper toast

--- a/app/elements/pages/page-plugins.css
+++ b/app/elements/pages/page-plugins.css
@@ -45,7 +45,7 @@ a {
 }
 
 #content {
-  overflow: auto;
+  /*overflow: auto;*/
   -webkit-overflow-scrolling: touch;
   padding: 0 10px;
 }
